--- a/django_zopeproductversions/templates/index.html
+++ b/django_zopeproductversions/templates/index.html
@@ -2,7 +2,7 @@
 Transitional//EN"><html>
 <head>
 <title>Zope Product Versions and more</title>
-<link type='text/css' rel='stylesheet' href='media/css/base.css' />
+<link type='text/css' rel='stylesheet' href='admin_media/css/base.css' />
 <style type='text/css'>
 body{
     width: 100%;
