--- a/django_zopeproductversions/templates/index.html
+++ b/django_zopeproductversions/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01
 Transitional//EN"><html>
 <head>
-<title>Zope Product Versions and more</title>
+<title>Extended changelog</title>
 <link type='text/css' rel='stylesheet' href='admin_media/css/base.css' />
 <style type='text/css'>
 body{
@@ -23,8 +23,13 @@ body{
 	<div style='text-align: center; margin: 0px auto;'>
 	    <table style='margin: 0px auto; width: 80%;'>
 	    <thead>
+		<th>Product</th>
+		<th>Version</th>
+		<th>Type</th>
+		<th>Requires update</th>
+		<th>Documentation update</th>
+
 		<th>Commit ID</th>
-		<th>Observations</th>
 		<th style='width: 5em;'>Author</th>
 		<th style='width: 25em;'>Commit message</th>
 		<th>Commit date</th>
@@ -32,15 +37,31 @@ body{
 	    {% autoescape off %}
 	    {% for c in commits %}
 		<tr class="{% cycle 'row1' 'row2' %}">
+		<td>{{c.product}}</td>
+		<td>{{c.version}}</td>
+		<td>{{c.record_type}}</td>
+		<td>{{c.requires_update}}</td>
+		<td>{{c.doc_update}}</td>
 		<td>
                     <a href="https://svn.eionet.europa.eu/projects/Naaya/changeset/{{c.int_number}}" target="_blank">
                     {{c.number}}
                     </a>
                 </td>
-		<td>{{c.obs_rst}}</td>
 		<td>{{c.author}}</td>
 		<td>{{c.message}}</td>
 		<td>{{c.datec}}</td>
+		</tr>
+		<!-- {% cycle 'row1' 'row2' %} -->
+		<tr class="{% cycle 'row1' 'row2' %}">
+		    <td colspan='5'>
+			{{c.obs_rst}}
+		    </td>
+		    <td colspan='4'>
+			{% if c.update_info %}
+			    Updating information:<br />
+			    {{c.update_info}}
+			{% endif %}
+		    </td>
 		</tr>
 	    {% endfor %}
 	    {% endautoescape %}
