--- a/nystatus/templates/index.html
+++ b/nystatus/templates/index.html
@@ -17,7 +17,7 @@ body{
 	<hr />
 
 	    <div style='text-align: right; font-weight: bold;'>
-		<a href='admin/django_zopeproductversions/commit/'>Proceed to admin &raquo;</a>
+		<a href='admin/nystatus/commit/'>Proceed to admin &raquo;</a>
 	    </div>
 
 	<div style='text-align: center; margin: 0px auto;'>
@@ -69,7 +69,7 @@ body{
 
 	    <div style='text-align: right; font-weight: bold;
 			margin-top: 1em;'>
-		<a href='admin/django_zopeproductversions/commit/'>Proceed to admin &raquo;</a>
+		<a href='admin/nystatus/commit/'>Proceed to admin &raquo;</a>
 	    </div>
 	</div>
 </div>
