resthtml filter for update info

--- a/nystatus/templates/nystatus/index.html
+++ b/nystatus/templates/nystatus/index.html
@@ -63,8 +63,7 @@ Transitional//EN"><html>
 		    <tr id="update_info-{{c.pk}}" class="toggle_info" >
 			<td colspan="7">
 			<div class="high_priority">
-			    {{ c.update_info }}
-			    ASDASD 
+			    {{ c.update_info|resthtml }}
 			</div>
 			</td>
 		    </tr>
