Updated title in view

--- a/nystatus/templates/nystatus/index.html
+++ b/nystatus/templates/nystatus/index.html
@@ -10,7 +10,7 @@ Transitional//EN"><html>
 </head>
 <body>
 <div style='padding: 2em;'>
-	<h1>Latest {{commits|length}} registered commits</h1>
+	<h1>Naaya Extended Changelog</h1>
 	<hr />
 
 	    <div style='text-align: right; font-weight: bold;'>
