--- a/nystatus/templates/admin/trigger.html
+++ b/nystatus/templates/admin/trigger.html
@@ -6,6 +6,6 @@
 Checking finished for <i>{{name}}</i><br />
 <br /><br />
 <a href='javascript: window.history.go(-1);'>&laquo; Go back</a><br /><br />
-<a href='../..'>View Zope Instances &raquo;</a>
+<!--<a href='../..'>View Zope Instances &raquo;</a>-->
 </div>
 {% endblock %}
