different manner of triggering changelog sync

--- a/nystatus/templates/nystatus/index.html
+++ b/nystatus/templates/nystatus/index.html
@@ -26,7 +26,7 @@ Transitional//EN"><html>
 		<a href='admin/nystatus/release/'>Proceed to admin &raquo;</a>
 	    </div>
 
-	<div style='text-align: center; margin: 0px auto;'>
+	<div style='margin: 0px auto;'>
 	    <table style='margin: 0px auto; width: 80%;'>
 	    <thead>
 		<th>Product</th>
