Prettier admin, report level set to 3 in rest

--- a/nystatus/templates/admin/trigger.html
+++ b/nystatus/templates/admin/trigger.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div style='text-align: center; margin: 0px auto; font-weight: bold; size: 15px;'>
-Checking finished for <i>{{name}}</i><br />
+Syncing changelog for <i>{{name}}</i> is in progress.<br />
 <br /><br />
 <a href='javascript: window.history.go(-1);'>&laquo; Go back</a><br /><br />
 <!--<a href='../..'>View Zope Instances &raquo;</a>-->
